# alea-legal-benchmark

./: .pre-commit-config.yaml  GENERATION_STATUS.md  README.md  REASONING_NOTATION_GUIDE.md  pyproject.toml
alea_legal_benchmark/contracts/: generate_negotiation_variations.py  generate_negotiation_variations_v2.py  generate_negotiation_variations_v3.py  generate_soli_clauses_001.py  generate_soli_docs_001.py  inspect_reasoning.py  reasoning_models.py
alea_legal_benchmark/utils/: paths.py  soli.py
docs/: README_NEGOTIATION_VARIATIONS.md
samples/contracts/negotiation_variations_001/: variations_20251118_041856.jsonl
samples/contracts/negotiation_variations_v3/: test_parallel.jsonl  variations_v3_20251118_061436.jsonl  variations_v3_full.jsonl
samples/contracts/soli_clauses_001/: sample_2024-10-01T060813.147233.jsonl  sample_2024-10-01T070818.939313.jsonl  sample_2024-10-01T095721.577527.jsonl
samples/contracts/soli_docs_001/: sample_2024-10-01T073052.576508.jsonl  sample_2024-10-01T074307.982984.jsonl  sample_2024-10-01T095731.791895.jsonl
