[tool.poetry]
name = "alea-legal-benchmark"
version = "0.1.0"
description = ""
authors = ["Michael Bommarito <michael.bommarito@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alea-llm-client = "^0.1.1"
alea-data-generator = "^0.1.0"
soli-python = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
