[project]
name = "alea-legal-benchmark"
version = "0.1.0"
description = ""
authors = [{ name = "Michael Bommarito", email = "michael.bommarito@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "alea-llm-client>=0.1.1,<0.2",
    "alea-data-generator>=0.1.0,<0.2",
    "soli-python>=0.1.4,<0.2",
    "pydantic-ai>=0.2.4",
    "datasets>=4.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
